--- a/.github/workflows/daily-challenge.yml
+++ b/.github/workflows/daily-challenge.yml
@@ -5,6 +5,9 @@ on:
     - cron: "0 6 * * *"
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   generate:
     runs-on: ubuntu-latest
@@ -28,3 +31,5 @@ jobs:
           git add src/java_daily_challenges/
           git commit -m "Add daily Java challenge"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
