--- a/.github/workflows/daily-challenge.yml
+++ b/.github/workflows/daily-challenge.yml
@@ -20,6 +20,10 @@ jobs:
         with:
           python-version: "3.x"
 
+      - name: Install dependencies
+        run: |
+          pip install requests
+
       - name: Run script to generate challenge
         env:
           GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
