--- a/.github/workflows/hard_challenge_weekly.yml
+++ b/.github/workflows/hard_challenge_weekly.yml
@@ -35,6 +35,6 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add hard_challenges/
+          git add src/hard_challenges/
           git commit -m "chore: desafio hard semanal"
           git push
